--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
+  <!-- Parse -->
+  <script src="https://npmcdn.com/parse/dist/parse.min.js"></script>
+
   <!-- un-comment this code to enable service worker
   <script>
     if ('serviceWorker' in navigator) {
