--- a/src/pages/login/login copy.html
+++ b/src/pages/login/login copy.html
@@ -3,45 +3,39 @@
   <div class="splash-info">
     <div class="splash-logo"></div>
     <div class="splash-intro">
+      {{ 'WELCOME_INTRO'}}
     </div>
   </div>
 <ion-header>
-
   <ion-navbar>
-    <ion-title>{{ 'LOGIN_TITLE' | translate }}</ion-title>
+    <ion-title>{{ 'LOGIN_TITLE'}}</ion-title>
   </ion-navbar>
-
 </ion-header>
-
-
 <ion-content>
   <form (submit)="doLogin()">
     <ion-list>
 
-
-      <!--
-
       <ion-item>
-        <ion-label fixed>{{ 'EMAIL' | translate }}</ion-label>
+        <ion-label fixed>{{ 'Username'}}</ion-label>
         <ion-input type="email" [(ngModel)]="account.email" name="email"></ion-input>
       </ion-item>
 
-     
-      Want to use a Username instead of an Email? Here you go:  -->
+      <!--
+      Want to use a Username instead of an Email? Here you go:
 
       <ion-item>
         <ion-label floating>{{ 'USERNAME' | translate }}</ion-label>
         <ion-input type="text" [(ngModel)]="account.username" name="username"></ion-input>
       </ion-item>
-     
+      -->
 
       <ion-item>
-        <ion-label fixed>{{ 'PASSWORD' | translate }}</ion-label>
+        <ion-label fixed>{{ 'Password'}}</ion-label>
         <ion-input type="password" [(ngModel)]="account.password" name="password"></ion-input>
       </ion-item>
 
       <div padding>
-        <button ion-button color="primary" block>{{ 'LOGIN_BUTTON' | translate }}</button>
+        <button ion-button color="primary" block>{{ 'Signin'}}</button>
       </div>
 
     </ion-list>
