--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -3,7 +3,7 @@
   <div class="splash-info">
     <div class="splash-logo"></div>
     <div class="splash-intro">
-     {{ 'Click Signin or Signup to Create an Account' | translate }}
+     {{ 'Press Signin or Signup to Create an Account' | translate }}
     </div>
   </div>
   <div padding>
